styles.css
#header{
padding-left: 2em;
width: 100%;
height: 19em;
align-content: center;

background: rgb(216, 233, 216);

}
    #title{
        font-size: 3em;
        margin-bottom: 0.5em;

    }
    #title_text{
        padding-right: 23em;
        font-size: 1.6em;
    }

#services{ /* APARTADO SERVICIOS*/

    display:flex;
    padding-top: 2em;
    height: 18.5em;

    width: 100%;
}

    #services_title{ /*PALABRA SERVICIO*/
        font-size: 2em;
        margin-left: 12.45em;
        margin-bottom: 1.5em;
    }
    #triangles{ /*CONJUNTO TRIÁNGULOS*/
        display: flex;
        justify-content: space-between;
        padding-left: 10em;
        margin-right: 2em;

    }
        .tipe_service{ /*CADA TRIÁNGULO*/
            text-align: center;
            height: 10em;
            width: 12em;
            border-radius: 1em;
            background: rgb(216, 233, 216);
            margin-right: 2em;
        }
            .icon_triangle{
                margin-top: 2em;


            }
            .text_triangle{
                margin-top: 0.5em;
                margin-bottom: 1em;
                font-size: 1.5em;

            }

#our_team{

    padding-top: 3em;
    width: 100%;

    height: 55em;
    background: rgb(216, 233, 216);
}
    #our_team_title{
        font-size: 2em;
        text-align: center;
        
    }
    #first_workers{
        display: flex;
        justify-content: space-evenly;

        padding-top: 2em;
        
    }
    #second_workers{
        display: flex;
        justify-content: space-evenly;

        margin-left: 8%;
        margin-right: 8%;
        padding-top: 2em;

    }
        .worker{
            border-style: ridge;
            border-radius: 1em;

            height: 12em;
            width: 10em;
            background: rgb(255, 255, 255);
        }
            .photo{
                justify-self: center;
                margin-top: 1.2em;
                margin-left: 2em;

                width: 4em;
                height: 4em;
            }
                .photo_worker{
                    border-radius: 10em;
                }
            .name{
                text-align: center;
                font-size: 0.8em;
                margin-top: 4em;
            }
            .workstation{
                text-align: center;

                font-size: 1em;
            }
    #text{
        margin-left: 4em;
        margin-right: 4em;
        margin-top: 2em;

        font-size: 1.5em;
        text-align: center;
    }

#FAQ{
    padding-top: 2em;
    width: 100%;

    height: 26em;
}
    #content_FAQ{
        display: flex;

        height: 15em;
        margin-left: 3em;
        margin-right: 3em;

    }
        #title_img{
            width: 30%;
            margin-top:3%;
            margin-left:6em;
        }
            #title_FAQ{
                font-size: 2.5em;
                margin-left: 1.4em;
            }
            #img_FAQ{
                margin-left: 1em;

            }
        #questions{
            width: 70%;
            align-content: center;
            margin-top:4%;
        }
            .dropdown{
                display: flex;

                padding-top: 0.3em;
                padding-bottom: 0.3em;
                padding-left: 0.3em;
                margin-bottom: 2em;
                margin-left: 2em;

                border-radius: 2em;
                width: 90%;

                background: rgb(47, 92, 47);
            }
                .q{ /*PREGUNTAS DEL FAQ*/
                    color:white;
                    font-size: 1.4em;
                    padding-left: 1em;
                }


#contact{
    display: flex;
    justify-content: space-around;
    align-items: center;

    width: 100%;
    height: 12em;

    background: rgb(216, 233, 216);
}
    #contact_text{
        text-align: center;
        margin-left:2em;
        margin-right:2em;
    }
        #text_top{
            font-size: 1.3em;
        }
        #text_bottom{
            font-size: 2em;
        }
    #contact_button{

        width: 30%;
        height: 30%;

        align-content: center;
        text-align: center;
    }
        #button{
            width: 80%;
            height: 80%;

            background: rgb(47, 92, 47);
            color: white;
            font-size: 1.2em;

            border-radius: 2em;
            background: rgb(47, 92, 47);
        }

#testimonials{

    width: 100%;
    height: 32em;

    /*background: url("./Img/image.png");*/

}
    #testimony_title{
        margin-top: 1em;
        font-size: 2.5em;
        text-align: center;
    }
    #testimonials_content{
        margin-top: 2em;
        margin-left: 5em;
        margin-right: 5em;
    }
        .users{
            display: flex;
            margin-bottom: 2em;

        }
            .content_user{
                align-content: center;
                margin-left: 2em;
            }
                .name_user{
                    margin-bottom: 0.5em;
                    font-size: 1.5em;
                }
                .testimonial_user{
                    font-size: 1.2em;
                }

#footer{
    padding-left: 2em;
    width: 100%;
    height: 10em;

    background: rgb(216, 233, 216);

    align-content: center;
}
    .text_footer{
        font-size: 1.2em;
    }
    .text2_footer{
        font-size: 1.2em;
        margin-top: 1em;
    }





/*MEDIA QUERIES*/

@media (390px <= width <844px){
    #header{
        text-align: center;
        padding-left: 0;
        height: 15em;
    }
    #title{
        font-size: 2.5em;
        margin-bottom: 0.5em;

    }
    #title_text{
        padding-right: 0;
        font-size: 1.3em;
        margin-left: 1em;
        margin-right: 1em;
    }

}
@media (390px <= width <844px){
    #title_text{
        padding: 0;
        text-align: center;
    }
}

/* Media query SERVICIOS*/
@media (390px <= width <844px){
    #services{ /* APARTADO SERVICIOS*/

        display:contents;
        padding-top: 2em;
        height: 18em;
    
        width: 100%;
    }
    
        #services_title{ /*PALABRA SERVICIO*/
            font-size: 2em;
            margin-left: 0;
            margin-bottom: 1em;
            text-align: center;
        }
        #triangles{ /*CONJUNTO TRIÁNGULOS*/
            display: flex;
            justify-content: space-around;
            padding-left: 0;
            margin-right: 0;
            margin-bottom: 2em;
            text-align: center;
            align-content: center;
        }
            .tipe_service{ /*CADA TRIÁNGULO*/
                height: 8em;
                width: 6.5em;
                margin-right: 0;
                text-align: center;
                align-content: center;
            }
            .text_triangle{
                padding: 0;
                margin-bottom: 1.5em;
            }


}
@media (390px <= width <844px){
    #our_team{
        height: 30em;
        background: white;

    }
    #first_workers{
        display: none;

    
    }
    #second_workers{
        display: none;
        margin-left: 0;
        margin-right: 0;
    }
    #text{
        margin-left: 1em;
        margin-right: 1em;
        margin-top: 2em;

        font-size: 1.3em;
        text-align: center;
    }
}
@media (390px <= width <844px){
    #FAQ{
        padding-top: 0;
        width: 100%;
        margin-left: 0;
        margin-right: 0;
        height: 22em;
        text-align: center;
        
    }
    .dropdown{
        margin-bottom: 1em;
        margin-left: 1.2em;
        margin-right: 0;
        text-align: center;
        align-items: center;
        width: 20em;
        height: 3em;
        padding-top:0;
        padding-bottom:0;
        
    }
    .q{ /*PREGUNTAS DEL FAQ*/
        padding-left: 0;
        align-content: center;
        margin-left: 0;
        margin-right: 0;
        width: 100%;    
    }
#contact{

    height: 10em;
    width: 100%;
    margin: 0;
    padding: 0;

}
    #contact_text{
        margin-left:0;
        margin-right:0;
    }
        #text_top{
            font-size: 1.2em;
        }
        #text_bottom{
            font-size: 1.6em;
        }
    #contact_button{
        width: 30%;
        height: 30%;
        align-content: center;
        text-align: center;
    }
        #button{
            width: 95%;
            height: 95%;
            font-size: 1.1em;
        }
}

@media (390px <= width <844px){
    #testimonials{
        height: 34em;
        margin-left: 0;
    }
    #testimony_title{
        margin-top: 1em;
        font-size: 2.5em;
        text-align: center;
    }
    #testimonials_content{
        margin-top: 2em;
        margin-left: 1em;
        margin-right: 1em;
    }
        .users{
            display: flex;
            margin-bottom: 2em;

        }
            .content_user{
                align-content: center;
                margin-left: 2em;
            }
                .name_user{
                    margin-bottom: 0.5em;
                    font-size: 1.5em;
                }
                .testimonial_user{
                    font-size: 1.2em;
                }
}

@media (390px <= width <844px){
    #footer{
        padding-left: 0;
        text-align: center;
        height: 7em;
    }
        .text_footer{
            font-size: 0.8em;
        }
        .text2_footer{
            font-size: 0.8em;

        }
}

